--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                 <p>Твой Никита</p>
             </div>
             <!-- Контейнер для гифки -->
+            <div class="gif-container">
+                <img src="orig.gif" alt="GIF" style="width: 100%; height: auto;" loop>
+            </div>
         </div>
     </div>
     
